[package]
name = "rantbot"
version = "0.1.0"
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { verison = "0.9.0-rc.4", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "model"] }
rand = "0.7.3"
rant = "4.0.0-alpha.13"
regex = "1.4.1"
tokio = { version = "0.2", features = ["macros"] }